// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - server composing databaseType option no with jwt should match generated files 1`] = `
{
  ".devcontainer/Dockerfile": {
    "stateCleared": "modified",
  },
  ".devcontainer/devcontainer.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jib/entrypoint.sh": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/ApplicationWebXml.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/LoggingAspect.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/AsyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CRLFLogConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DateTimeFormatConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocaleConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingAspectConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityInMemoryConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityJwtConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/StaticResourcesWebConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/WebConfigurer.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/management/SecurityMetersService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/management/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/SpaWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthenticateController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/tls/keystore.p12": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback-spring.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/error.html": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/IntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TechnicalStructureTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/AsyncSyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/SpringBootTestClassOrderer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/StaticResourcesWebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/management/SecurityMetersServiceTests.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/AuthenticationIntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/JwtAuthenticationTestUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/TokenAuthenticationIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/TokenAuthenticationSecurityMetersIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/filter/SpaWebFilterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AuthenticateControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/WithUnauthenticatedMockUser.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/junit-platform.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - server composing databaseType option no with oauth2 should match generated files 1`] = `
{
  ".devcontainer/Dockerfile": {
    "stateCleared": "modified",
  },
  ".devcontainer/devcontainer.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jib/entrypoint.sh": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/ApplicationWebXml.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/LoggingAspect.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/AsyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CRLFLogConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DateTimeFormatConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocaleConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingAspectConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/OAuth2Configuration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/StaticResourcesWebConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/WebConfigurer.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/oauth2/AudienceValidator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/oauth2/CustomClaimConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/oauth2/JwtGrantedAuthorityConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/oauth2/OAuthIdpTokenResponseDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/oauth2/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/OAuth2RefreshTokensWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/SpaWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthInfoResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/LogoutResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/tls/keystore.p12": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback-spring.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/error.html": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/IntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TechnicalStructureTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/AsyncSyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/SpringBootTestClassOrderer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/StaticResourcesWebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/TestSecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/oauth2/AudienceValidatorTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/oauth2/CustomClaimConverterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/test/util/OAuth2TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/filter/SpaWebFilterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/LogoutResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/WithUnauthenticatedMockUser.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/junit-platform.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - server composing databaseType option no with session should match generated files 1`] = `
{
  ".devcontainer/Dockerfile": {
    "stateCleared": "modified",
  },
  ".devcontainer/devcontainer.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jib/entrypoint.sh": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/ApplicationWebXml.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/LoggingAspect.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/AsyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CRLFLogConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DateTimeFormatConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocaleConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingAspectConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/StaticResourcesWebConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/WebConfigurer.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/SpaWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/tls/keystore.p12": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback-spring.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/error.html": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/IntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TechnicalStructureTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/AsyncSyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/SpringBootTestClassOrderer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/StaticResourcesWebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/filter/SpaWebFilterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/WithUnauthenticatedMockUser.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/junit-platform.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;
